--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    implementation 'com.facebookLogin.android:facebookLogin-login:[4,5)'
     implementation 'com.facebook.android:facebook-login:4.30.0'
     implementation 'com.android.support:design:27.0.2'
+
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    implementation 'com.google.android.gms:play-services-location:12.0.1'
+    implementation 'com.google.android.gms:play-services-places:12.0.1'
+    implementation 'noman.placesapi:placesAPI:1.1.3'
 
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
@@ -36,6 +40,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
     implementation 'com.google.firebase:firebase-storage:12.0.1'
+    implementation 'com.google.firebase:firebase-firestore:12.0.1'
+
+
 
 }
 
